--- a/css/site.css
+++ b/css/site.css
@@ -18,6 +18,8 @@ html{
     text-align: center;
     margin-top: -50px;
     color: #000b3d;
+    font-size: 20px;
+    font-family: 'Bevan', cursive;
 }
 
 .footer{
